fix the uneven spaces between navbar categories (#133)
* fix the position of the nav bar

* Fixed an error in the layout of home page

* fix uneven spaces between navbar categories

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,10 +184,11 @@ nav .nav_buttons {
   margin: 0px;
 
   height: 100%;
-  width: 35%;
+  width: 30%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, fit-content(100px));
   position: relative;
+  gap: 70px;
 }
 
 .nav_buttons .nav_button {
